--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "del": "^3.0.0",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.1-alpha.2",
     "multer": "^1.4.1",
